# LocalizationUtils

./: .gitignore  .gitmodules  CMakeLists.txt  LocalizationUtils.sln  README.md
.github/workflows/: ci.yml
LocalizationUtils/: LocalizationUtils.vcxproj  LocalizationUtils.vcxproj.filters  localization_utils_settings.json
LocalizationUtils/src/: CMakeFileGenerator.cpp  CMakeFileGenerator.h  Constants.h  LocalizationSourceFileGenerator.cpp  LocalizationSourceFileGenerator.h  Main.cpp  Runner.cpp  Runner.h  Utility.cpp  Utility.h  Validator.cpp  Validator.h  headers.h
LocalizationUtils/src/Commands/: BuildCommand.cpp  BuildCommand.h  DebugBuildCommand.cpp  DebugBuildCommand.h  GenerateCommand.cpp  GenerateCommand.h  GenerateSettingsFile.cpp  GenerateSettingsFile.h  ICommand.cpp  ICommand.h  ReleaseBuildCommand.cpp  ReleaseBuildCommand.h
ProjectLocalization/: localization_utils_settings.json
ProjectLocalization/localization/: localization_en.json  localization_meta.json  localization_ru.json
Tests/: tests.py
